[tool.poetry]
name = "pglive"
version = "0.6.6"
description = "Pyqtgraph live plot"
authors = ["Martin Domaracky <domarm@comat.sk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/domarm-comat/pglive"
repository = "https://github.com/domarm-comat/pglive"
keywords = ["pyqtgraph", "realtime", "live", "plotting", "pyqt5", "pyqt6", "pyside2", "pyside6"]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"Topic :: Software Development :: Libraries",
"License :: OSI Approved :: MIT License",
"Natural Language :: English",
"Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
pyqtgraph = "^0.13.3"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
mypy = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pyqt5 = "^5.15.9"
pyqt6 = "^6.4.2"
pyside6 = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"